# faro

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
app/: main.py  security.py  settings.py
app-flutter/: README.md  pubspec.yaml
app-flutter/android/app/: build.gradle.kts
app-flutter/android/app/src/main/: AndroidManifest.xml
app-flutter/ios/Runner/: Info.plist
app-flutter/ios/Runner.xcodeproj/: project.pbxproj
app-flutter/lib/: main.dart
app-flutter/lib/api/: api_client.dart  credentials.dart  models.dart
app-flutter/lib/capture/: capture_picker.dart  captured_image.dart
app-flutter/lib/face/: embedder.dart  face_detector.dart  face_overlay.dart
app-flutter/lib/pages/: home_page.dart  settings_page.dart
app-flutter/lib/tts/: speaker.dart
app/api/: chat.py  enroll.py  persons.py  recognize.py
app/enrollment/: tokens.py
app/perception/: face.py
app/persons/: store.py
app/prompts/: llama3_template.py
app/providers/: base.py  meta_llama_mobile.py  mock.py
docs/: demo.cast
experiments/: README.md
experiments/001-mvp-backend/: README.md  learning-card.md  test-card.md
experiments/002-self-enrollment/: README.md  learning-card.md  test-card.md
experiments/003-mobilefacenet-swap/: README.md  learning-card.md  test-card.md
experiments/004-flutter-app/: README.md  SMOKE.md  learning-card.md  test-card.md
scripts/: convert_mobilefacenet_to_tflite.py  demo.sh  fetch_test_data.py  similarity_check.py  smoke_recognize_embedding.py
tests/: test_api.py  test_enrollment.py  test_providers.py  test_recognize_embedding.py
(+1 files in other folders)
