[project]
name = "faro"
version = "0.1.0"
description = "Local-first Llama 3.2 inference. The backend here is an eval/iteration harness — the product runs on-device."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
llama-cpp = ["llama-cpp-python>=0.3"]
perception = [
    "insightface>=0.7",
    "onnxruntime>=1.19",
    "pillow>=10",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
